--- a/app/design/frontend/base/default/template/aydus/buynow/login.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/login.phtml
@@ -9,7 +9,7 @@
  */
 ?>
 <form action="<?php echo $this->getLoginUrl() ?>" method="post" id="buynow-login-form" class="scaffold-form">
-    <?php echo $this->getBlockHtml('formkey'); ?>
+    <?php echo $this->getFormKeyHtml() ?>
     <ul class="messages hidden">
         <li class="error-msg">
             <ul><li><span></span></li></ul>
