--- a/app/design/frontend/base/default/template/aydus/buynow/checkout.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/checkout.phtml
@@ -29,13 +29,14 @@
             <li>
                 <label for="shipping_address_id" class="required"><em>*</em><?php echo $this->__('Shipping Method') ?></label>
                 <div class="input-box">
-                    <?php echo $this->getShippingMethodsHtmlSelect() ?>
+                    <?php echo $this->getChildHtml('buynow.shipping_method') ?>
                 </div>
             </li>
             <?php endif ?>
             <li>
                 <label for="payment[ba_agreement_id]" class="required"><em>*</em><?php echo $this->__('Billing Agreement') ?></label>
                 <div class="input-box">
+                    <input type="hidden" id="payment-method" name="payment[method]" value="<?php echo $this->getPaymentMethod()?>" />
                     <?php echo $this->getBillingAgreementsHtmlSelect() ?>
                 </div>
             </li>
