Started update rates

--- a/app/design/frontend/base/default/template/aydus/buynow/button.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/button.phtml
@@ -23,6 +23,7 @@
         checkoutLabel : '<?php echo $this->helper('checkout')->__('Checkout') ?>',
         onepageUrl : '<?php echo $this->getUrl('checkout/onepage') ?>',
         addToCartUrl : '<?php echo $this->getUrl('buynow/index/addtocart') ?>',
+        shippingMethodsUrl : '<?php echo $this->getUrl('buynow/index/shippingmethods') ?>',
         progressBackground : "background: white url(<?php echo $this->getSkinUrl('aydus/buynow/buynow-progress.gif') ?>) no-repeat center center;"
     };
 
