--- a/app/design/frontend/base/default/template/aydus/buynow/button.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/button.phtml
@@ -25,6 +25,7 @@
         addToCartUrl : '<?php echo $this->getUrl('buynow/index/addtocart') ?>',
         changeBillingAddressUrl : '<?php echo $this->getUrl('buynow/index/changebillingaddress') ?>',
         shippingMethodsUrl : '<?php echo $this->getUrl('buynow/index/shippingmethods') ?>',
+        changeShippingMethodUrl : '<?php echo $this->getUrl('buynow/index/changeshippingmethod') ?>',
         progressBackground : "background: white url(<?php echo $this->getSkinUrl('aydus/buynow/buynow-progress.gif') ?>) no-repeat center center;"
     };
 
