Removed jQuery UI and refactored to css popup

--- a/app/design/frontend/base/default/template/aydus/buynow/checkout.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/checkout.phtml
@@ -48,7 +48,7 @@
             </li>
         </ul>
     </div>
-    <div class="buttons-set hidden">
+    <div class="buttons-set">
         <button type="submit" class="button" title="<?php echo $this->__('Checkout') ?>" name="send" id="buynow-checkout-button"><span><span><?php echo $this->__('Checkout') ?></span></span></button>
     </div>
 </form>    
