--- a/app/design/frontend/base/default/template/aydus/buynow/login.phtml
+++ b/app/design/frontend/base/default/template/aydus/buynow/login.phtml
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </div>
-    <div class="buttons-set hidden">
+    <div class="buttons-set">
         <button type="submit" class="button" title="<?php echo $this->__('Login') ?>" name="send" id="buynow-login-button"><span><span><?php echo $this->__('Login') ?></span></span></button>
     </div>
 </form>
