--- a/skin/frontend/base/default/aydus/buynow/buynow.css
+++ b/skin/frontend/base/default/aydus/buynow/buynow.css
@@ -10,6 +10,65 @@
     display: none;
 }
 
-#buynow-popup .dialog {
-    height: 354px;
+#buynow-popup {
+    display: none;
+    position: relative;
+}
+
+.buynow-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: .50;
+    -webkit-opacity: .5;
+    -moz-opacity: .5;
+    filter: alpha(opacity=50);
+    z-index: 1000;
+}
+
+.buynow-container {
+    background-color: white;
+    height: auto;
+    left: 50%;
+    margin: -120px 0 0 -160px;
+    padding: 10px;
+    position: fixed;
+    top: 40%;
+    width: 320px;
+    z-index: 1000;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    box-shadow: 0 0 20px 0 #222;
+    -webkit-box-shadow: 0 0 20px 0 #222;
+    -moz-box-shadow: 0 0 20px 0 #222;
+}
+
+.buynow-form {
+    min-height: 200px;
+}
+
+.buynow-header {
+    overflow: hidden;
+}
+
+.buynow-header h3 {
+    float: left;
+}
+
+.buynow-close {
+    display: block;
+    color: #636363;
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 30px;
+    float: right;
+    line-height: 18px;
+}
+
+.buynow-close:before {
+    content: "×";
 }
